kubernetes/smart-home/home-assistant/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: hassio
  namespace: smart-home
  labels:
    app: hassio
spec:
  serviceName: hassio
  replicas: 1
  selector:
    matchLabels:
      app: hassio
  template:
    metadata:
      labels:
        app: hassio
    spec:
      hostNetwork: false
      automountServiceAccountToken: false
      securityContext:
        fsGroup: 1000
      containers:
        - name: hassio
          image: "ghcr.io/home-assistant/home-assistant:2026.6.3"
          imagePullPolicy: IfNotPresent
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
            capabilities:
              add:
                - NET_ADMIN
                - NET_RAW
                - NET_BROADCAST
          resources:
            requests:
              memory: 512Mi
              cpu: 500m
              ephemeral-storage: &ephemeralHaStorage 8Gi
            limits:
              memory: 2Gi
              cpu: 1000m
              ephemeral-storage: *ephemeralHaStorage
          ports:
            - name: http
              containerPort: 8123
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          volumeMounts:
            - name: hassio
              mountPath: /config
        - name: code-server
          image: codercom/code-server:4.123.0
          imagePullPolicy: IfNotPresent
          args:
            - --auth
            - none
            - --port
            - "12321"
            - "/config"
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
          resources:
            requests:
              memory: 1Gi
              cpu: 500m
              ephemeral-storage: &ephemeralHaCodeStorage 8Gi
            limits:
              memory: 1Gi
              cpu: 500m
              ephemeral-storage: *ephemeralHaStorage
          ports:
            - name: code-http
              containerPort: 12321
              protocol: TCP
          volumeMounts:
            - name: hassio
              mountPath: /config
            - name: hassio-code-server-data
              mountPath: /home/coder
  volumeClaimTemplates:
    - metadata:
        name: hassio
      spec:
        accessModes:
          - "ReadWriteOnce"
        storageClassName: "openebs"
        resources:
          requests:
            storage: 32Gi
    - metadata:
        name: hassio-code-server-data
      spec:
        accessModes:
          - "ReadWriteOnce"
        storageClassName: "openebs"
        resources:
          requests:
            storage: 4Gi
