kubernetes/smart-home/home-assistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hassio
  namespace: smart-home
  labels: {}
  annotations: {}
spec:
  type: ClusterIP
  selector: {}
  ports:
    - port: 8123
      name: http
      targetPort: http
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: code-server
spec:
  type: ClusterIP
  selector: {}
  ports:
    - port: 8443
      name: code-server-http
      targetPort: code-server-http
      protocol: TCP
