kubernetes/smart-home/home-assistant/http-route-coder.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hassio-code-http-route
  namespace: smart-home
  labels:
    app: hassio
spec:
  parentRefs:
    - name: smart-home-gateway
  hostnames:
    - "hassio-code.mcmumf.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: code-server
          port: 12321
