kubernetes/smart-home/home-assistant/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hassio-http-route
  namespace: smart-home
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Smart Home
    gethomepage.dev/icon: https://raw.githubusercontent.com/home-assistant/frontend/refs/heads/dev/public/static/icons/favicon-512x512.png
    gethomepage.dev/name: Home Assistant
    gethomepage.dev/pod-selector: "app=hassio"
  labels:
    app: hassio
spec:
  parentRefs:
    - name: smart-home-gateway
  hostnames:
    - "hassio.mcmumf.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: hassio
          port: 8123
