kubernetes/smart-home/home-assistant/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hassio
  namespace: smart-home
  labels:
    app: hassio
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/proxy-body-size: "64m"
    nginx.org/client-max-body-size: "64m"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Smart Home
    gethomepage.dev/icon: https://raw.githubusercontent.com/home-assistant/frontend/refs/heads/dev/public/static/icons/favicon-512x512.png
    gethomepage.dev/name: Home Assistant
    gethomepage.dev/pod-selector: "app=hassio"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - &hostName hassio.mcmumf.dev
      secretName: hassio.mcmumf.dev-tls
  rules:
    - host: *hostName
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: hassio
                port:
                  number: 8123
